--- a/index.html
+++ b/index.html
@@ -103,5 +103,26 @@
             </div>
       </div>
     </header>
+
+    <main>
+        <section class="about">
+            <div class="container">
+                <div class="about_left_and_right">
+                    <div class="about_left">
+                        <img src="./svg/about.svg" alt="">
+                    </div>
+
+                    <div class="about_right">
+                        <p>о нашем походе</p>
+                        <h2>Исследуйте все горные массивы мира вместе с нами</h2>
+                        <h3>Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum, "consectetur"и занялся его поисками в классической латинской литературе.</h3>
+                        <button class="about_btn" type="button">Программа тура</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
   </body>
 </html>
