end of our section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,71 @@
                 </div>
             </div>
         </section>
+
+
+        <section class="our">
+            <div class="container">
+                <div class="our_left_and_right">
+                    <div class="our_left">
+
+                        <div class="o_inside1">
+                        <h3>наше предложение</h3>
+                        <h2>Лучшие программы для тебя</h2>
+                        <p>Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа.</p>
+                        </div>
+
+
+                        <div class="o_inside2">
+                            <div class="i_i">
+                                <img src="./svg/o1.svg" alt="">
+                            </div>
+                            <div class="k_k">
+                                <h3>Опытный гид</h3>
+                                <p>Для современного мира базовый вектор развития предполагает независимые способы реализации соответствующих условий активизации.</p>
+                            </div>
+                        </div>
+
+                        <div class="o_inside2">
+                            <div class="i_i">
+                                <img src="./svg/o2.svg" alt="">
+                            </div>
+                            <div class="k_k">
+                                <h3>Опытный гид</h3>
+                                <p>Для современного мира базовый вектор развития предполагает независимые способы реализации соответствующих условий активизации.</p>
+                            </div>
+                        </div>
+
+                        <div class="o_inside2">
+                            <div class="i_i">
+                                <img src="./svg/o3.svg" alt="">
+                            </div>
+                            <div class="k_k">
+                                <h3>Опытный гид</h3>
+                                <p>Для современного мира базовый вектор развития предполагает независимые способы реализации соответствующих условий активизации.</p>
+                            </div>
+                        </div>
+
+                        <div class="o_inside_3">
+                            <button class="our_btn" type="button">Стоимость программ</button>
+                        </div>
+
+                    </div>
+
+
+
+                    <div class="our_right">
+                        <div class="img_divs">
+                            <img src="./svg/our1.svg" alt="">
+                            <img src="./svg/our2.svg" alt="">
+                            <img src="./svg/our3.svg" alt="">
+                            <img src="./svg/our4.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
 
