end of famous section

--- a/index.html
+++ b/index.html
@@ -185,6 +185,27 @@
             </div>
         </section>
 
+        <section class="famous">
+            <div class="container">
+                <div class="f_title">
+                    <h3>по версии отдыхающих</h3>
+                    <h2>Популярные направления</h2>
+                </div>
+
+                <div class="f_cards">
+                    <div class="f_card">
+                        <img src="./svg/f1.svg" alt="">
+                        <img src="./svg/f2.svg" alt="">
+                        <img src="./svg/f3.svg" alt="">
+                    </div>
+                </div>
+
+                <div class="f_item">
+                    <button class="f_btn" type="button">Рейтинг направлений</button>
+                </div>
+
+            </div>
+        </section>
 
     </main>
 
