--- a/index.html
+++ b/index.html
@@ -207,6 +207,79 @@
             </div>
         </section>
 
+        <section class="blog">
+            <div class="container">
+                <div class="b_title">
+                    <h3>делимся впечатлениями</h3>
+                    <h2>Блог о путешествиях</h2>
+                </div>
+
+                <div class="b_cards">
+
+                    <div class="b_card">
+                        <div class="left">
+                            <img src="./svg/b1.svg" alt="">
+                        </div>
+                        <div class="right">
+                            <h3>Красивая Италия, какая она в реальности?</h3>
+                            <p>Для современного мира базовый вектор развития предполагает независимые способы реализации соответствующих условий активизации.</p>
+                            <div class="internet">
+                                <p>01/04/2023</p>
+                                <h3>читать статью</h3>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="b_card">
+                        <div class="left">
+                            <img src="./svg/b2.svg" alt="">
+                        </div>
+                        <div class="right">
+                            <h3>Долой сомнения! Весь мир открыт для вас!</h3>
+                            <p>Для современного мира базовый вектор развития предполагает независимые способы реализации соответствующих условий активизации.</p>
+                            <div class="internet">
+                                <p>01/04/2023</p>
+                                <h3>читать статью</h3>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="b_card">
+                        <div class="left">
+                            <img src="./svg/b3.svg" alt="">
+                        </div>
+                        <div class="right">
+                            <h3>Как подготовиться к путешествию в одиночку? </h3>
+                            <p>Для современного мира базовый вектор развития предполагает независимые способы реализации соответствующих условий активизации.</p>
+                            <div class="internet">
+                                <p>01/04/2023</p>
+                                <h3>читать статью</h3>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="b_card">
+                        <div class="left">
+                            <img src="./svg/b4.svg" alt="">
+                        </div>
+                        <div class="right">
+                            <h3>Индия ... летим?</h3>
+                            <p>Для современного мира базовый вектор развития предполагает независимые способы реализации соответствующих условий активизации.</p>
+                            <div class="internet">
+                                <p>01/04/2023</p>
+                                <h3>читать статью</h3>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+
     </main>
 
 
