--- a/index.html
+++ b/index.html
@@ -280,6 +280,29 @@
             </div>
         </section>
 
+        <section class="photo">
+            <div class="container">
+                <div class="p_title">
+                    <h3>фото-отчет</h3>
+                    <h2>Делимся впечатлениями</h2>
+                </div>
+
+                <div class="photo_divs">
+                    <div class="photo_div">
+                        <img src="./svg/p1.svg" alt="">
+                        <img src="./svg/p2.svg" alt="">
+                        <img src="./svg/p3.svg" alt="">
+                    </div>
+
+                    <div class="photo_div2">
+                        <img src="./svg/p4.svg" alt="">
+                        <img src="./svg/p5.svg" alt="">
+                        <img src="./svg/p6.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 
