--- a/index.html
+++ b/index.html
@@ -305,6 +305,49 @@
 
     </main>
 
+     <footer class="footer">
+        <div class="container">
+            <div class="footer_wrapper">
+                <div class="footer1">
+                    <div class="gvhbdaa">
+                        <h3>Компания «РумТибет»</h3>
+                    </div>
+
+                    <div class="dasq">
+
+                        <p>Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney.</p>
+                    </div>
+                    <div class="footer_fonts">
+                        <img src="./svg/fotter1.svg" alt="">
+                        <img src="./svg/footer2.svg" alt="">
+                        <img src="./svg/footer3.svg" alt="">
+                        <img src="./svg/footer4.svg" alt="">
+                    </div>
+                </div>
+
+
+                <div class="footer2">
+                    <h3>Наши услуги</h3>
+                    <p>Прогулки в горы летом NEW</p>
+                    <p>Зимние походы в горы</p>
+                    <p>Посещение храмов в горах</p>
+                    <p>Экстремальные виды туризма</p>
+                    <p>Походы в джунглях Амазонии</p>
+                    <p>Поездка в Африку</p>
+                </div>
+
+
+                <div class="footer3">
+                    <h3>Важно для путешествий</h3>
+                    <p>Как собрать в долгий поход?</p>
+                    <p>Жизненно важные предметы для похода</p>
+                    <p>Медицинская страховка, гарантии безопасности</p>
+                    <p>Если вы врач - загляните сюда</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
   </body>
 </html>
