--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                 <div class="form1_indide1">
         <select name="cars" id="cars">
         <option value="volvo">Локация для тура</option>
-        <option value="saab">hola</option>
-        <option value="mercedes">me llamo khasan</option>
-        <option value="audi">adios</option>
+        <option value="saab">Switzerland</option>
+        <option value="mercedes">Los Angales</option>
+        <option value="audi">Hawaii Island</option>
         </select>
                 </div>
 
@@ -82,9 +82,9 @@
             <div class="form3_inside1">
         <select name="cars" id="car">
         <option value="volvo">Участники</option>
-        <option value="saab">hello</option>
-        <option value="mercedes">my name is</option>
-        <option value="audi">Khasan</option>
+        <option value="saab">One Way</option>
+        <option value="mercedes">Round Trip</option>
+        <option value="audi">Multi city</option>
         </select>
         </div>
 
