--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
 
         <div class="form4">
-            <button class="showcase_btn" type="button">Найти программу</button>
+            <!-- <button class="showcase_btn" type="button">Найти программу</button> -->
         </div>
 
         </div>
